--- a/help/engl/medienbib_cloudeditor.html
+++ b/help/engl/medienbib_cloudeditor.html
@@ -3,7 +3,7 @@
 <head>
 
   <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
-  <title>Der Tagwolken-Editor</title>
+  <title>The Tagcloud Editor</title>
 
 
   <style title="" media="" type="text/css">
@@ -32,7 +32,7 @@ font-size: 12px;
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
       <td>
-      <h2 class="head">Der Tagwolken-Editor</h2>
+      <h2 class="head">The Tagcloud Editor</h2>
 
       </td>
 
@@ -42,62 +42,79 @@ font-size: 12px;
 </table>
 
 <hr style="width: 100%; height: 2px;"><br>
-Wenn Sie sich &uuml;ber LastFM zus&auml;tzliche Tags f&uuml;r ihre
-Medienbibliothek besorgen, kann es vorkommen, dass f&uuml;r Sie
-v&ouml;llig sinnlose Tags dazu kommen, oder einige Tags in
-verschiedenen Schreibweisen. <br>
+
+If you use LastFM for getting additional tags for the tracks in your
+library, you may get some useless tags, or identical tags with
+different spellings. <br>
+
 <br>
-Mit dem Tagwolken-Editor k&ouml;nnen Sie damit etwas aufr&auml;umen.<br>
+
+With the tagcloud editor you can clean up this mess a little bit.<br>
+
 <br>
-<span style="font-weight: bold;">Existierende Tags</span><br>
-Eine Auflistung aller, wirklich aller Tags in der Medienbibliothek, von
-h&auml;ufigen wie "Singer-Songwriter" bis hin zu exotischen wie "songs
+
+<span style="font-weight: bold;">Existing tags</span><br>
+
+A list of all (really all) tags in your library. From popular ones as
+"Singer-Songwriter" to very exotic ones like "songs
 die so gut sind das ich meiner oma ihr klein haeuschen zwar nicht
-verkaufen aber zumindest dafuer beleihen wuerde".<br>
-Sie k&ouml;nnen hier Tags umbenennen, zusammenf&uuml;hren oder
-l&ouml;schen. Markieren Sie dazu einen oder mehrere Tags
-und&nbsp;klicken Sie den entsprechenden Button.<br>
-Die Option "<span style="font-weight: bold;">Verstecke Auto-Tags</span>"
-sorgt daf&uuml;r, dass die Tags, die Nemp von sich aus erstellt hat
-(Interpret, Album, Jahr, Genre, Jahrzehnt) ausgeblendet werden. Diese
-Tags k&ouml;nnen Sie nicht ganz ver&auml;ndern. Sie k&ouml;nnen aber
-diese AutoTags f&uuml;r Dateien ver&auml;ndern, f&uuml;r die Nemp
-diesen Tag nicht selbst hinzugef&uuml;gt hat.<br>
-Die Option "<span style="font-weight: bold;">Speichere zusammengef&uuml;hrte/umbenannte/gel&ouml;schte Tags</span>" sorgt daf&uuml;r, dass Ihre Eingaben gespeichert werden und bei k&uuml;nftigen Abfragen an LastFM ber&uuml;cksichtigt werden.<br>
+verkaufen aber zumindest dafuer beleihen wuerde". (The last one
+actually exists, and translates to "songs which are that good, that I
+won't sell my grandma's cottage for it, but maybe hypothecate it").<br>
+
+You can rename these tags, merge or delete them. Just select one ore
+more tags and click the appropriate button.<br>
+
+<br>
+
+The setting <span style="font-weight: bold;">"Hide
+Auto-Tags"</span> will hide tags, taht Nemp created on its own
+(like Artist, Album, Year, Genre, Decade). You cannot change these tags
+completely. However you can change these tags for files, for which Nemp
+did not automatically created them.<br>
+
+<br>
+
+The setting <span style="font-weight: bold;">"Remember
+merged/renamed/deleted tags"</span> will save your input, so that
+following queries to LastFM will be automatically corrected.<br>
+
 <span style="font-weight: bold;"><br>
-Beispiel:</span> Sie f&uuml;hren die beiden Tags "Female Vocalist"
-(ohne s am Ende) und "Female Vocalists" (mit s am Ende) zu "Female
-Vocalists" zusammen. Wenn sie sp&auml;ter f&uuml;r ein Lied Tags von
-LastFM holen, und dieses Lied ist mit "Female Vocalist" (ohne s)
-getaggt, wird dieser Tag automatisch zu "Female Vocalists" (mit s)
-ge&auml;ndert.<br>
+
+Example:</span> You merge the two tags "Female Vocalist" and
+"Female Vocalist<span style="font-weight: bold;">s</span>"
+to "Female Vocalists". If a later query to LastFM replies "Female
+Vocalist", this tag will automatically be changed to "Female Vocalists"<br>
+
 <br>
+
 <br>
-<span style="font-weight: bold;">Zusammengef&uuml;hrte/umbenannte Tags</span><br>
-In diesem Tab werden die Tags angezeigt, die sie zuvor umbenannt oder
-zusammengef&uuml;hrt haben. Diese Liste wird beim Holen neuer Tags von
-LastFM ber&uuml;cksichtigt, sodass die Tagwolke dadurch nicht wieder
-aufs neue zugem&uuml;llt wird.<br>
+
+<span style="font-weight: bold;">Merged/renamed tags</span><br>
+
+A list of all modified tags. This is the list Nemp uses to adapt the
+LastFM replies.<br>
+
 <br>
+
 <br>
-<span style="font-weight: bold;">Gel&ouml;schte Tags</span><br>
-Tags, die sie nicht in Ihrer Tagwolke sehen wollen. Auch diese Liste wird beim Holen neuer Tags ber&uuml;cksichtigt.<br>
+
+<span style="font-weight: bold;">Deleted Tags</span><br>
+
+Tags, you don't want to see in your tagcloud. If LastFM reply contains
+one of these tags, it is just ignored.<br>
+
 <br>
+
 <br>
-<span style="font-weight: bold;">Dateien aktualisieren</span><br>
-Wenn Sie Tags umbenannt, zusammengef&uuml;hrt oder gel&ouml;scht haben,
-sollten Sie im Anschluss auch die Information in den
-mp3-Dateien selbst &auml;ndern lassen. Dieser Vorgang dauert eine
-Weile, in der Regel ein wenig l&auml;nger als das Einlesen der Daten in
-die Medienbibliothek am Anfang.<br>
-<br>
-<br>
-<span style="font-weight: bold;">Bugfix</span><br>
-In einer fr&uuml;heren Testversion von Nemp 4 war ein bl&ouml;der
-Fehler drin, der dazu f&uuml;hrte, dass die Tags nicht richtig in die
-Datei geschrieben wurden. In dieser Version von Nemp ist daher eine
-Funktion eingebaut, die diesen Fehler in den Dateien korrigieren kann.<br>
-Wenn Sie Nemp 4 zum ersten Mal benutzen, und keine Pre-Alpha-Version
-getestet haben, k&ouml;nnen Sie diese Funktion getrost ignorieren.
+
+<span style="font-weight: bold;">Update Files now</span><br>
+
+After renaming/merging/deleting tags, you should change the tags in
+your mp3-files as well. This may take a while - probably a little bit
+longer than reading the information while scanning your harddrive for
+new files.<br>
+
+<span style="font-weight: bold;"></span>
 </body>
 </html>
