--- a/help/engl/nemp_basics.html
+++ b/help/engl/nemp_basics.html
@@ -3,12 +3,17 @@
 <head>
 
 
+
+  
   
   <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
 
+
   
 
 
+  
+  
   
   <title>Grundlagen</title>
   <style title="" media="" type="text/css">
@@ -32,199 +37,217 @@ font-size: 12px;
 <body>
 
 
+
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
+
 
 
   <tbody>
 
 
+
     <tr>
+
 
 
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
 
+
       <td>
       
-      <h2 class="head">Grundlagen</h2>
+      
+      <h2 class="head">Basics</h2>
+
 
 
       </td>
 
 
+
     </tr>
 
 
+
+  
   
   </tbody>
 </table>
 
 
+
 <hr style="width: 100%; height: 2px;"><br>
-Das Grundkonzept von Nemp sieht so aus:<br>
+The basic concept of Nem p is as follows:<br>
+
 <ol>
-  <li>Es gibt eine Playlist. Nicht zwei oder drei, sondern nur eine.
-Die Eintr&auml;ge in dieser Playlist werden&nbsp;der Reihe nach
-abgespielt, oder auch zuf&auml;llig.</li>
-  <li>In der Medienbibliothek werden alle Audiodateien verwaltet. In
-der Medienbibliothek kann gest&ouml;bert, oder aber gezielt nach einem
-Titel gesucht werden.</li>
+
+  <li>There is one playlist. Not two ore three, only one. The items in this playlist will be played one after the other, or randomly.</li>
+
+  <li>The Media Library manages all your audio files. You can browse in the library, or search for a specific title.</li>
+
 </ol>
-Die Philosphie hinter Nemp ist <span style="font-style: italic;">KISS - Keep it simple, stupid!</span><br>
-<br>
-Sinnvolle Funktionen werden eingebaut, wenn sie die grundlegende
-Bedienung nicht un&uuml;bersichtlicher oder komplizierter machen.<br>
-<br>
-
-
-Das Nemp-Fenster besteht aus vier Teilen.<br>
-
+The philosophy behind Nemp is <span style="font-style: italic;">KISS - Keep it simple, stupid!</span><br>
 
 <br>
+New features will be implemented, if (and only if) the basic handling won't become more confusing ore complicated by them.<br>
+<br>
+The nemp window consists of four parts.<br>
+
+
+
+<br>
+
 
 
 <div style="text-align: center;"><img style="width: 398px; height: 298px;" alt="player" src="nemp_start.jpg"><br>
 
 
+
 </div>
 
 
-<br>
-
-
-<span style="font-weight: bold;">1. Der Player<br>
-
-
-</span>Im Mittelteil ist der eigentliche Player angeordnet. Im
-oberen
-Teil&nbsp;finden Sie die &uuml;blichen Anzeigen und
-Steuerungs-Elemente. Im unteren Teil werden entweder weitere Dinge
-angezeigt (Cover oder Lyrics), oder weiterf&uuml;hrende
-Steuerungs-Elemente wie Equalizer, Effekte und
-Kopfh&ouml;rer-Steuerung.<br>
-
-
-<span style="font-style: italic;">Tipp: Klicken Sie
-einfach auf den gro&szlig;en Play-Button </span><img style="width: 30px; height: 30px; font-style: italic;" alt="play" src="BtnPlay.png" align="middle"><span style="font-style: italic;">, wenn Sie mit dem Abspielen
-einer Datei anfangen wollen.</span><br>
-
 
 <br>
 
 
-<span style="font-weight: bold;">2. Die Playlist</span><br>
+
+<span style="font-weight: bold;">1. The Player<br>
 
 
-Anzeige aller Titel in der aktuellen Playlist. &Uuml;ber einen
-Klick auf den Button <img style="width: 24px; height: 24px;" alt="menu" src="TabBtnNemp.png" align="middle">
-k&ouml;nnen Sie das Playlist-Men&uuml; &ouml;ffnen.<br>
+
+</span>The center part is the actual player. On the top you will find
+the usual control and display elements. Below that part some addtional
+information is shown (like cover art or lyrics), or additional controls
+(like equalizer, effects, headphones).<br>
 
 
-<span style="font-style: italic;">Tipp: Ziehen Sie per
-Drag&amp;Drop
-ein paar Dateien oder einen Ordner in diesen Bereich, wenn Sie ihre
-Playlist f&uuml;llen m&ouml;chten.</span><br>
+
+<span style="font-style: italic;">Tip: Just click the big Play-Button </span><img style="width: 30px; height: 30px; font-style: italic;" alt="play" src="BtnPlay.png" align="middle"><span style="font-style: italic;"> to start playing some files.</span><br>
+
 
 
 <br>
 
 
-<span style="font-weight: bold;">3. Medienbibliothek,
-&Uuml;bersicht</span><br>
+
+<span style="font-weight: bold;">2. The Playlist</span><br>
+Display of the current playlist. click on the button <img style="width: 24px; height: 24px;" alt="menu" src="TabBtnNemp.png" align="middle"> for the playlist menu.<br>
 
 
-In der Medienbibliothek werden alle Musikdateien verwaltet. Sie
-k&ouml;nnen auf drei verschiedene Arten in ihrer Musiksammlung
-st&ouml;bern.<br>
+
+<span style="font-style: italic;">Tip: Try Drag&amp;Drop to fill the playlist.</span><br>
+
+
+
+<br>
+
+
+
+<span style="font-weight: bold;">3. Media Library, overview</span><br>
+The media library manages your audio files. You can browse your library by three different ways:<br>
+
 
 
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
 
 
+
   <tbody>
 
 
+
     <tr>
+
 
 
       <td style="width: 30px;"><img style="width: 24px; height: 24px;" src="TabBtnClassic.png" alt="classic"></td>
 
 
-      <td>Klassische Ansicht. Die Medienbibliothek wird nach den
-eingestellten Kriterien sortiert, z.B. nach Interpret und Album.<br>
+
+      <td>Classic view. The library is sorted by the selected criterias, e.g. Artist and Album.<br>
+
 
 
       </td>
 
 
+
     </tr>
 
 
+
     <tr>
+
 
 
       <td style="width: 30px;"><img style="width: 24px; height: 24px;" src="TabBtnCoverflow.png" alt="coverflow"></td>
 
 
-      <td>Coverflow. Die Alben in der Medienbibliothek werden in
-einem Coverflow angezeigt.</td>
+
+      <td>Coverflow. The albums in your library are shown in a coverflow.</td>
+
 
 
     </tr>
+
 
 
     <tr>
 
 
+
       <td><img style="width: 24px; height: 24px;" src="TabBtnTagCloud.png" alt="tagcloud"></td>
 
 
-      <td>Tagcloud. Die Eigenschaften (Tags) der&nbsp;Titel
-in ihrer Sammlung werden in einer Tagcloud organisiert.</td>
+
+      <td>Tagcloud. All the tags in your library are organized in a tagcloud.</td>
+
 
 
     </tr>
 
 
+
+  
   
   </tbody>
 </table>
 
 
+
 <span style="font-style: italic;"><br>
 
 
-Tipp: Ziehen Sie per Drag&amp;Drop ihren Musik-Ordner in diesen
-Bereich, um mit dem Aufbau der Medienbibliothek zu beginnen.</span><br>
 
+Tip:&nbsp;Drag&amp;Drop your "Music folder" here to start building your library.</span><br>
 
-<br>
-
-
-<span style="font-weight: bold;">4.&nbsp;</span><span style="font-weight: bold;">Medienbibliothek, </span><span style="font-weight: bold;">Titelanzeige</span><br>
-
-
-Im unteren Teil werden die Titel in ihrer Musiksammlung aufgelistet,
-die zur aktuellen Auswahl im &Uuml;bersichtsteil (3) passen. Oder,
-wenn
-Sie die Schnellsuche verwenden, die Suchtreffer. Wenn Sie hier einen
-Titel markieren, werden daneben weitere Informationen angezeigt.<br>
-
-
-<span style="font-style: italic;">Tipp: Sie
-k&ouml;nnen per
-Drag&amp;Drop Titel von hier in die Playlist einf&uuml;gen. Und
-auch in
-den Windows-Explorer oder andere Programme.</span><span style="font-weight: bold;"></span><br>
 
 
 <br>
 
 
+
+<span style="font-weight: bold;">4. Media Libray</span><span style="font-weight: bold;">, </span><span style="font-weight: bold;">title list</span><br>
+The bottom part of the Nemp window shows all titles of your library,
+that matches the current selection in the overview part (3), or - after
+using the quicksearch - the current search results. <br>
+
+
+
+<span style="font-style: italic;">Tip: Try Drag&amp;Drop from here to the playlist. Or drag some files&nbsp;to the Windows Explorer to copy some files.</span><span style="font-weight: bold;"></span><br>
+
+
+
 <br>
+
+
+
+<br>
+
 
 
 <span style="font-weight: bold;"></span><br>
+
 
 
 </body>
